--- a/ApkPatchLibraryDemo/project.properties
+++ b/ApkPatchLibraryDemo/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-20
-android.library.reference.1=../../ApkPatchLibrary
+android.library.reference.1=../ApkPatchLibrary
