Update ApkPatchLibraryServer Project
delete the Debug and Release path in ApkPatchLibraryServer

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
+gen/*
+bin/*
+obj/*
 *.class
 
-gen/*
-
-bin/*
-
-obj/*
-
-Debug/*
-
-Release/*
+ApkPatchLibraryServer/Debug/*
+ApkPatchLibraryServer/Release/*
